Fix issue with horizontal scroll bar showing up regardless of page width. (#822)

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -933,6 +933,13 @@ li {
   .nav > li > a {
     padding: 10px;
   }
+
+  footer {
+    .navbar-text {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
 }
 
 
